Week 08 作业 完成必做题1